comment needed on scrape

--- a/Scrape.ipynb
+++ b/Scrape.ipynb
@@ -25,10 +25,10 @@
     "import pdfplumber\n",
     "import pandas as pd\n",
     "\n",
-    "# Specify the path to your PDF\n",
+    "#Clean up was required after due to the nature of the pdfs being split accross multiple pages\n",
+    "\n",
     "pdf_path = \"2022 District League Table Report .pdf\"\n",
     "\n",
-    "# Define the page ranges for each category\n",
     "page_ranges = {\n",
     "    \"Education\": (79, 86),  \n",
     "    \"Health\": (86, 94),   \n",
@@ -40,45 +40,34 @@
     "    \"Child Protection\": (133, 141) \n",
     "}\n",
     "\n",
-    "# Define the columns for the final CSV\n",
     "columns = [\"Name\", \"Region\", \"Description\", \"2021 Ranking\", \"2022 Score\", \"2022 Ranking\"]\n",
     "\n",
-    "# Open the PDF and loop through the specified page ranges\n",
     "with pdfplumber.open(pdf_path) as pdf:\n",
     "    for category, (start_page, end_page) in page_ranges.items():\n",
-    "        # Initialize a list to store the data for the current category\n",
     "        data = []\n",
     "\n",
-    "        # Loop through the pages within the specified range for the category\n",
     "        for page_number in range(start_page - 1, end_page):\n",
     "            page = pdf.pages[page_number]\n",
     "            text = page.extract_text()\n",
     "\n",
-    "            # Split the text into lines\n",
     "            lines = text.strip().split(\"\\n\")\n",
     "\n",
-    "            # Extract relevant data from each line\n",
     "            for line in lines:\n",
-    "                # Skip non-relevant lines or headers\n",
     "                if line.startswith(\"Name\") or \"DLT Report\" in line or len(line.strip()) == 0:\n",
     "                    continue\n",
     "\n",
-    "                # Split the line to capture individual elements\n",
     "                parts = line.split()\n",
     "\n",
-    "                # Extract columns based on structure; adjust this if the format varies\n",
     "                if len(parts) >= 6:\n",
-    "                    name = \" \".join(parts[:-5])  # Name might have multiple words\n",
+    "                    name = \" \".join(parts[:-5]) \n",
     "                    region = parts[-5]\n",
     "                    description = parts[-4]\n",
     "                    rank_2021 = parts[-3]\n",
     "                    score_2022 = parts[-2]\n",
     "                    rank_2022 = parts[-1]\n",
     "\n",
-    "                    # Append extracted data to the list\n",
     "                    data.append([name, region, description, rank_2021, score_2022, rank_2022])\n",
     "\n",
-    "        # Create a DataFrame for the current category and save it as a separate CSV\n",
     "        df = pd.DataFrame(data, columns=columns)\n",
     "        csv_filename = f\"{category}_scores.csv\"\n",
     "        df.to_csv(csv_filename, index=False)\n",
